--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="margin: 0px; padding: 0px; overflow-x: hidden">
+  <body style="margin: 0px; padding: 0px; overflow-x: hidden;overflow-y: scroll">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
